--- a/src/sass/base/_start.scss
+++ b/src/sass/base/_start.scss
@@ -87,6 +87,7 @@ body {
     font-family: 'SF Pro Display';
     font-weight: 400;
     font-style: normal;
+    line-height: 150%;
     background-color: #E5E5E5;
 }
 
