--- a/src/sass/UI/_button.scss
+++ b/src/sass/UI/_button.scss
@@ -1,11 +1,9 @@
 .button {
-    padding: 7px 42px;
+    padding: 7px 30px;
     background-color: $blue;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 5px;
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 150%;
-    letter-spacing: 0.035em;
-    color: $white;
+    @media (min-width: 992px) {
+        padding: 7px 42px 7px 41px;
+    }
 }
