--- a/src/sass/UI/_button.scss
+++ b/src/sass/UI/_button.scss
@@ -1,9 +1,12 @@
 .button {
-    padding: 7px 30px;
-    background-color: $blue;
+    background-color: $orange;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 5px;
-    @media (min-width: 992px) {
-        padding: 7px 42px 7px 41px;
+    &_blue {
+        padding: 7px 30px;
+        background-color: $blue;
+        @media (min-width: 992px) {
+            padding: 7px 42px 7px 41px;
+        }
     }
 }
