--- a/src/sass/base/_start.scss
+++ b/src/sass/base/_start.scss
@@ -34,6 +34,7 @@ body {
     width: 100%;
     font-size: 100%;
     line-height: 150%;
+    overflow-x: hidden;
     -ms-text-size-adjust: 100%;
     -moz-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
