--- a/src/sass/blocks/_01header.scss
+++ b/src/sass/blocks/_01header.scss
@@ -1,5 +1,9 @@
 .header {
+    display: none;
     background-color: $text;
+    @media (min-width: 768px) {
+        display: block;
+    }
     &__wrapper {
         padding: 11px 0 12px;
         align-items: center;
@@ -37,6 +41,7 @@
     &__menu {
         display: flex;
         justify-content: space-between;
+        text-transform: uppercase;
         &>:not(:last-child) {
             position: relative;
             &::after {
