--- a/src/sass/UI/_text-styles.scss
+++ b/src/sass/UI/_text-styles.scss
@@ -6,6 +6,7 @@
     color: $gray;
 }
 .header-2{
+    text-align: center;
     font-weight: 400;
     font-size: 48px;
     line-height: 150%;
@@ -14,12 +15,12 @@
 }
 
 .header-3 {
-    font-weight: 400;
-    font-size: 24px;
+    font-weight: 600;
+    font-size: 36px;
     line-height: 150%;
     letter-spacing: 0.05em;
     text-transform: uppercase;
-    color: $gray;
+    color: $blue-dark;
 }
 
 .main-text {
@@ -40,7 +41,7 @@
     font-weight: 400;
     font-size: 16px;
     line-height: 150%;
-    color: $gray;
+    color: $text2;
 }
 
 .link {
