Tariffs section ready. Responsive

--- a/src/sass/blocks/_02promo.scss
+++ b/src/sass/blocks/_02promo.scss
@@ -52,7 +52,7 @@
     }
     &__title {
         font-weight: 500;
-        font-size: 42px;
+        font-size: 44px;
         line-height: 100%;
         letter-spacing: 0.06em;
         color: #FFFFFF;
@@ -167,7 +167,7 @@
         @media (min-width: 576px) {
             left: 168px;
             bottom: -34px;
-            transform: unset;
+            transform: none;
         }
         @media (min-width: 768px) {
             left: 227px;
