--- a/src/sass/UI/_text-styles.scss
+++ b/src/sass/UI/_text-styles.scss
@@ -8,19 +8,46 @@
 .header-2{
     text-align: center;
     font-weight: 400;
-    font-size: 48px;
+    font-size: 34px;
     line-height: 150%;
     letter-spacing: 0.04em;
     color: $gray;
+    @media (min-width: 768px) {
+        font-size: 38px;
+    }
+    @media (min-width: 992px) {
+        font-size: 42px;
+    }
+    @media (min-width: 1200px) {
+        font-size: 48px; 
+    }
 }
 
 .header-3 {
     font-weight: 600;
-    font-size: 36px;
+    font-size: 28px;
     line-height: 150%;
     letter-spacing: 0.05em;
     text-transform: uppercase;
     color: $blue-dark;
+    @media (min-width: 992px) {
+        font-size: 30px;
+    }
+    @media (min-width: 1200px) {
+        font-size: 36px;
+    }
+}
+
+.header-4 {
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 150%;
+    letter-spacing: 0.05em;
+    text-transform: uppercase;
+    color: $gray;
+    @media (min-width: 992px) {
+        font-size: 24px;
+    }
 }
 
 .main-text {
@@ -50,7 +77,7 @@
     font-size: 16px;
     line-height: 150%;
     text-decoration-line: underline;
-    color: $gray;
+    color: $orange;
 }
 .button-text {
     font-weight: 500;
