--- a/src/sass/blocks/_05sll.scss
+++ b/src/sass/blocks/_05sll.scss
@@ -1,5 +1,11 @@
 .sll {
-    padding: 94px 0;
+    padding: 56px 0;
+    @media (min-width: 768px) {
+        padding: 74px 0;
+    }
+    @media (min-width: 992px) {
+        padding: 94px 0;
+    }
     &__about {
         margin-top: 36px;
         width: 100%;
@@ -31,17 +37,63 @@
             opacity: 0.5;
         }
         &:nth-child(1) {
+            margin-top: 30px;
+            @media (min-width: 576px) {
+                margin-top: 0;
+            }
             & .sll-card__header {
                 margin-top: 15px;
                 max-width: 191px;
+                height: 105px; 
             }
         }
         &:nth-child(2) {
+            margin-top: 30px;
+            @media (min-width: 576px) {
+                margin-top: 0;
+            }
             & .sll-card__header {
                 max-width: 180px;
+                
             }
         }
-       
+        &:nth-child(3) {
+            margin-top: 30px;
+            @media (min-width: 992px) {
+                margin-top: 0;
+            }
+            & .sll-card__header {
+                max-width: 205px;
+                height: 105px; 
+                @media (min-width: 1200px) {
+                    margin-top: 15px;
+                    max-width: 232px;
+                }
+                
+            }
+        }
+        &:nth-child(4) {
+            margin-top: 30px;
+            @media (min-width: 992px) {
+                margin-top: 0;
+            }
+            & .sll-card__header {
+                max-width: 174px;
+                height: 105px; 
+                @media (min-width: 1200px) {
+                    margin-top: 15px;
+                    max-width: 213px;
+                }
+                
+            }
+        }
+    }
+    &__button {
+        margin-top: 67px;
+        & button {
+            padding: 7px 35px;
+        }
+        text-align: center;
     }
 }
 
@@ -55,28 +107,29 @@
     box-sizing: border-box;
     box-shadow: 0px 4px 4px rgba(183, 183, 183, 0.43);
     border-radius: 10px;
+    &::after {
+        content: ""; 
+        position: absolute;
+        top: 161px;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 180px;
+        height: 0.5px;
+        background-color: $blue-dark;
+    }
     &__header {
         position: relative;
         margin: 0 auto;
-        height: 161px;
+        height: 120px;
         font-weight: 600;
-        font-size: 20px;
+        font-size: 20px; 
         line-height: 150%;
         text-align: center;
         color: $blue-dark;
-        &::after {
-            content: ""; 
-            position: absolute;
-            bottom: 0px;
-            left: 0px;
-            width: 180px;
-            height: 0.5px;
-            background-color: $blue-dark;
-        }
     }
     &__text {
         flex: 1 0 auto;
-        margin-top: 75px;
+        margin-top: 30px;
         text-align: center;
         &>:not(:last-child) {
             margin-bottom: 16px;
