--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -13,5 +13,6 @@
 @import "./blocks/03tariff";
 @import "./blocks/04cms";
 @import "./blocks/05sll";
+@import "./blocks/06names";
 
 @import "./blocks/08advantages";
