Hosting section done responsive

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -14,5 +14,5 @@
 @import "./blocks/04cms";
 @import "./blocks/05sll";
 @import "./blocks/06names";
-
+@import "./blocks/07hosting";
 @import "./blocks/08advantages";
