--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -7,6 +7,7 @@
 @import "./UI/_text-styles";
 @import "./UI/contact";
 @import "./UI/button";
+@import "./UI/round-list";
 
 @import "./blocks/01header";
 @import "./blocks/02promo";
