--- a/src/sass/UI/_text-styles.scss
+++ b/src/sass/UI/_text-styles.scss
@@ -66,9 +66,12 @@
 
 .mini-text {
     font-weight: 400;
-    font-size: 16px;
+    font-size: 14px;
     line-height: 150%;
     color: $text2;
+    @media (min-width: 992px) {
+        font-size: 16px;
+    }
 }
 
 .link {
