Payment section done responsive

--- a/src/sass/blocks/_10fqa.scss
+++ b/src/sass/blocks/_10fqa.scss
@@ -61,7 +61,7 @@
                     transform: rotate(90deg);
                 }
                 &::after {
-                    display: none;
+                    transform: rotate(0deg);
                     opacity: 0;
                     background-color: transparent;
                 }
