--- a/src/sass/blocks/_11try.scss
+++ b/src/sass/blocks/_11try.scss
@@ -11,11 +11,58 @@
         background-color: $blue-dark;
         box-shadow: 0px 4px 4px rgba(46, 46, 46, 0.27);
         border-radius: 10px;
+        z-index: 5;
         @media (min-width: 510px) {
             padding: 45px 30px 32px;
         }
         @media (min-width: 768px) {
             padding: 64px 55px 40px;
+        }
+        @media (min-width: 992px) {
+            z-index: 0;
+        }
+    }
+    &__arrow-left {
+        position: absolute;
+        top: -25px;
+        left: 0px;
+        @media (min-width: 768px) {
+            top: -53px;
+        }
+        @media (min-width: 1200px) {
+            top: -92px;
+        }
+        & img {
+            width: 30%;
+            @media (min-width: 768px) {
+                width: 60%;
+            }
+            @media (min-width: 1415px) {
+                width: 100%;
+            }
+        }
+    }
+    &__arrow-right {
+        position: absolute;
+        top: -17px;
+        right: -135px;
+        @media (min-width: 768px) {
+            right: -78px;
+        }
+        @media (min-width: 1200px) {
+            right: -75px;  
+        }
+        @media (min-width: 1415px) {
+            right: 0px;  
+        }
+        & img {
+            width: 30%;
+            @media (min-width: 768px) {
+                width: 60%;
+            }
+            @media (min-width: 1415px) {
+                width: 100%;
+            }
         }
     }
     &__text {
