--- a/src/sass/UI/_contact.scss
+++ b/src/sass/UI/_contact.scss
@@ -24,6 +24,10 @@
             border-radius: 100%;
         }
     }
+    &__descr {
+        margin-top: 24px;
+        color: $white;
+    }
     &__contact {
         font-size: 16px;
         line-height: 150%;
