--- a/src/sass/blocks/_01header.scss
+++ b/src/sass/blocks/_01header.scss
@@ -1,58 +1,175 @@
 .header {
-    display: none;
+    display: block;
     background-color: $text;
+    // height: 50px;
     @media (min-width: 768px) {
         display: block;
+        // height: auto;
     }
+    // &__block {
+    //     position: fixed;
+    //     top: 0;
+    //     right: 0;
+    //     width: 70%;
+    //     z-index: 10;
+    //     background-color: $text;
+    //     transition: all .6s ease-out;
+    //     @media (min-width: 768px) {
+    //         position: static;
+    //         height: auto;
+    //         width: auto;
+    //     }
+    // }
     &__wrapper {
         padding: 11px 0 12px;
         align-items: center;
     }
+    &__mobile {
+        padding: 10px;
+        padding-top: 85px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        position: fixed;
+        top: 0;
+        right: 0;
+        width: 80%;
+        z-index: 10;
+        background-color: $text;
+        transition: all .6s ease-out;
+        @media (min-width: 576px) {
+            flex-direction: row;
+        }
+        @media (min-width: 768px) {
+            padding: 0 10px 0 10px;
+            position: static;
+            height: auto;
+        }
+    }
     &__logo {
-        
         & img {
-            margin-left: 10px;
-            width: 143px;
-            height: 88px;
+            width: 100px;
+            height: 62px;
+            @media (min-width: 768px) {
+                margin-left: 10px;
+                width: 143px;
+                height: 88px;
+            }
         }
     }
     &__contacts {
+        & .contact__contact {
+            font-size: 14px;
+            @media (min-width: 768px) {
+                font-size: 16px;
+            }
+        }
+        & .contact__contact_footnote {
+            font-size: 12px;
+            @media (min-width: 768px) {
+                font-size: 14px;
+            }
+        }
         &>:not(:last-child) {
             margin-bottom: 15px;
         }
     }
     &__login {
-        width: 44px;
-        height: 44px;
+        width: 34px;
+        height: 34px;
         border-radius: 100%;
         background-color: $blue;
+        @media (min-width: 768px) {
+            width: 44px;
+            height: 44px;
+        }
+        & img {
+            transform: scale(0.8);
+            @media (min-width: 768px) {
+                transform: none;
+            }
+        }
     }
     &__buttons {
+        margin-top: 10px;
         display: flex;
-        justify-content: flex-end;
+        align-items: center;
+        @media (min-width: 768px) {
+            margin: 0;
+            justify-content: flex-end;
+        }
         &>:not(:last-child) {
-            margin-right: 36px;
+            @media (min-width: 768px) {
+                margin-right: 36px;
+            }
+        }
+    }
+    &__button {
+        margin-right: 10px;
+        // margin-top: 10px;
+        padding: 7px 12px;
+        font-size: 16px;
+        @media (min-width: 576px) {
+            // margin-top: 0;
+            
+        }
+        @media (min-width: 768px) {
+            margin: 0;
+            padding: 7px 30px;
+            font-size: 18px;
+        }
+        @media (min-width: 992px) {
+            font-size: 20px;
         }
     }
     & nav {
-        padding: 16px 0px 18px;
+        margin-top: 227px;
+        padding: 30px 0px 0px;
         background-color:$white;
+        position: fixed;
+        top: 0;
+        right: 0;
+        width: 80%;
+        height: 100vh;
+        z-index: 10;
+        transition: all .6s ease-out;
+        @media (min-width: 576px) {
+            margin-top: 179px;
+        }
+        @media (min-width: 768px) {
+            margin: 0;
+            padding: 16px 0px 18px;
+            position: static;
+            width: auto;
+            height: auto;
+        }
     }
     &__menu {
         display: flex;
+        flex-direction: column;
+        align-items: center;
         justify-content: space-between;
         text-transform: uppercase;
+        @media (min-width: 768px) {
+            flex-direction: row;
+            align-items:unset;
+        }
         &>:not(:last-child) {
             position: relative;
             &::after {
+                display: none;
                 content: "";
                 position: absolute;
                 top: 2px;
-                right: -33px;
+                right: -27px;
                 width: 1px;
                 height: 20px;
                 opacity: 0.2;
                 background-color: $text;
+                @media (min-width: 768px) {
+                    display: block;
+                }
                 @media (min-width: 992px) {
                     top: 5px;
                     right: -45px;
@@ -61,6 +178,12 @@
                     right: -65px;
                 }
             }
+        }
+    }
+    &__link {
+        padding: 5px;
+        @media (min-width: 768px) {
+            padding: 0;
         }
     }
 }
@@ -76,5 +199,20 @@
             width: 20px;
             height: 20px;
         }
+    }
+}
+
+.header-overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    z-index: 20;
+    background-color: rgba(8,6,6,.5);
+    transition: all 2s ease-out;
+    &.active {
+        display: block;
     }
 }
