--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -8,6 +8,8 @@
 @import "./UI/contact";
 @import "./UI/button";
 @import "./UI/round-list";
+@import "./UI/burger";
+@import "./UI/slider";
 
 @import "./blocks/01header";
 @import "./blocks/02promo";
