--- a/src/sass/UI/_button.scss
+++ b/src/sass/UI/_button.scss
@@ -2,11 +2,18 @@
     background-color: $orange;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 5px;
+    transition: all 0.3s ease;
+    &:hover {
+        background-color: $blue;
+    }
     &_blue {
         padding: 7px 30px;
         background-color: $blue;
         @media (min-width: 1200px) {
             padding: 7px 42px 7px 41px;
+        }
+        &:hover {
+            background-color: $orange;
         }
     }
 }
