--- a/src/sass/base/_start.scss
+++ b/src/sass/base/_start.scss
@@ -90,6 +90,9 @@ body {
     font-style: normal;
     line-height: 150%;
     background-color: #E5E5E5;
+    &.locked {
+        overflow: hidden;
+    }
 }
 
 .image-bg {
