--- a/src/sass/blocks/_05sll.scss
+++ b/src/sass/blocks/_05sll.scss
@@ -24,6 +24,7 @@
         position: relative;
         list-style-type: none;
         counter-increment: list;
+        cursor: pointer;
         &::before {
             content: counter(list);
             position: absolute;
@@ -35,6 +36,12 @@
             text-align: center;
             color: $blue;
             opacity: 0.5;
+            transition: all 0.3s ease;
+        }
+        &:hover {
+            &::before {
+                color: $orange;
+            }
         }
         &:nth-child(1) {
             margin-top: 30px;
@@ -108,6 +115,10 @@
     box-sizing: border-box;
     box-shadow: 0px 4px 4px rgba(183, 183, 183, 0.43);
     border-radius: 10px;
+    transition: all 0.3s ease;
+    &:hover {
+        background: rgba(255, 255, 255, 0.3);;
+    }
     &::after {
         content: ""; 
         position: absolute;
