--- a/src/sass/blocks/_10fqa.scss
+++ b/src/sass/blocks/_10fqa.scss
@@ -51,6 +51,7 @@
     &__item {
         background: $white;
         box-shadow: 0px 4px 4px rgba(46, 46, 46, 0.27);
+        cursor: pointer;
         &:not(:last-child) {
             margin-bottom: 20px;
         }
@@ -80,6 +81,9 @@
         }
         @media (min-width: 992px) {
             padding: 24px 40px 26px 80px;
+        }
+        &:hover {
+            color: $orange;
         }
         &::before,
         &::after {
