--- a/src/sass/blocks/_10fqa.scss
+++ b/src/sass/blocks/_10fqa.scss
@@ -115,6 +115,7 @@
         display: none;
         padding: 0 40px 25px 50px;
         color: $gray;
+        transition: all 0.3s ease-out;
         @media (min-width: 992px) {
             padding: 0 40px 36px 80px;
         }
